Improved backend security and user authentication flow