@@ -6,9 +6,9 @@ import com.medibook.appointment.dto.AppointmentResponseDTO;
 import com.medibook.appointment.entities.*;
 import com.medibook.appointment.mapper.AppointmentMapper;
 import com.medibook.appointment.repositories.AppointmentRepository;
-import com.medibook.appointment.repositories.DoctorProfileRepository;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -16,10 +16,11 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AppointmentService {
+
+    private static final Logger logger = LoggerFactory.getLogger(AppointmentService.class);
 
     private final AppointmentRepository appointmentRepository;
     private final AppointmentMapper appointmentMapper;
@@ -28,9 +29,14 @@ public class AppointmentService {
     private final EmailService emailService;
     private final NotificationService notificationService;
 
-    @Autowired
-    public AppointmentService(AppointmentRepository appointmentRepository,  AppointmentMapper appointmentMapper,  UserService userService, DoctorProfileService doctorProfileService, DoctorProfileRepository doctorProfileRepository, EmailService emailService, NotificationService notificationService)
-    {
+    public AppointmentService(
+            AppointmentRepository appointmentRepository,
+            AppointmentMapper appointmentMapper,
+            UserService userService,
+            DoctorProfileService doctorProfileService,
+            EmailService emailService,
+            NotificationService notificationService
+    ) {
         this.appointmentRepository = appointmentRepository;
         this.appointmentMapper = appointmentMapper;
         this.userService = userService;
@@ -40,8 +46,7 @@ public class AppointmentService {
     }
 
     @Transactional
-    public Appointment bookAppointment(AppointmentRequestDTO dto, String userEmail) {
-
+    public AppointmentResponseDTO bookAppointment(AppointmentRequestDTO dto, String userEmail) {
         User user = userService.findUserByEmail(userEmail);
 
         Doctor_Profile doctor = doctorProfileService.findDoctorProfileById(dto.getDoctorId())
@@ -65,118 +70,111 @@ public class AppointmentService {
         appointment.setDescription(dto.getDescription());
         appointment.setStatus(AppointmentStatus.PENDING);
 
-        System.out.println("Appointment Saving");
-        appointmentRepository.save(appointment);
-        System.out.println("Appointment Saved");
+        logger.info("Saving appointment for patient {}", userEmail);
+        Appointment savedAppointment = appointmentRepository.save(appointment);
+        logger.info("Saved appointment with id {}", savedAppointment.getId());
 
-        // Create Emails for patient and Doctor
         emailService.sendAppointmentConfirmationEmailPatient(
                 userEmail,
-                appointment.getDate().toString(),
-                appointment.getTime().toString(),
+                savedAppointment.getDate().toString(),
+                savedAppointment.getTime().toString(),
                 doctor.getUser().getLastName()
         );
 
         emailService.sendAppointmentConfirmationEmailDoctor(
                 doctor.getUser().getEmail(),
-                appointment.getDate().toString(),
-                appointment.getTime().toString()
+                savedAppointment.getDate().toString(),
+                savedAppointment.getTime().toString()
         );
 
-        // Create doctor notification
         notificationService.createNotification(
                 doctor.getUser(),
                 "New pending appointment on "
-                        + appointment.getDate() + " at "
-                        + appointment.getTime()
+                        + savedAppointment.getDate() + " at "
+                        + savedAppointment.getTime()
                         + " from patient "
                         + user.getLastName()
         );
 
-        return appointment;
+        return getAppointmentResponseDTO(savedAppointment);
     }
 
-    public void updateAppointment(Long appointment_id, AppointmentRequestDTO newAppointment) {
-        Optional<Appointment> optionalAppointment= appointmentRepository.findById(appointment_id);
-        if(optionalAppointment.isPresent()) {
-            Appointment appointment = optionalAppointment.get();
-            appointment.setDate(newAppointment.getDate());
-            appointment.setDescription(newAppointment.getDescription());
-            appointment.setTime(newAppointment.getTime());
-            appointmentRepository.save(appointment);
-        }
+    public void updateAppointment(Long appointmentId, AppointmentRequestDTO newAppointment) {
+        Appointment appointment = appointmentRepository.findById(appointmentId)
+                .orElseThrow(() -> new IllegalArgumentException("Appointment not found"));
+
+        appointment.setDate(newAppointment.getDate());
+        appointment.setDescription(newAppointment.getDescription());
+        appointment.setTime(newAppointment.getTime());
+
+        appointmentRepository.save(appointment);
     }
 
     public List<AppointmentResponseDTO> getAppointments() {
-        List<Appointment> appointments = appointmentRepository.findAll();
-
-        // Map to DTOs
-        List<AppointmentResponseDTO> dtos = appointments.stream()
-                .map(this::getAppointmentResponseDTO)   // assuming you already have this method
-                .toList();
-
-        // Sort by date then time
-        return dtos.stream()
+        return appointmentRepository.findAll().stream()
+                .map(this::getAppointmentResponseDTO)
                 .sorted(Comparator
                         .comparing(AppointmentResponseDTO::getDate)
                         .thenComparing(AppointmentResponseDTO::getTime))
                 .toList();
     }
 
-    public Optional<Appointment> getAppointmentById(final Long appointment_id) {
-        return  appointmentRepository.findById(appointment_id);
+    public Optional<Appointment> getAppointmentById(Long appointmentId) {
+        return appointmentRepository.findById(appointmentId);
     }
 
     public List<Appointment> getAppointmentsByPatient(User user) {
         return appointmentRepository.findByUser(user);
     }
 
-    public List<Appointment> getAppointmentsByDoctorProfile(Doctor_Profile doctor_profile) {
-        return appointmentRepository.findByDoctor(doctor_profile);
+    public List<Appointment> getAppointmentsByDoctorProfile(Doctor_Profile doctorProfile) {
+        return appointmentRepository.findByDoctor(doctorProfile);
     }
 
     @Transactional
-    public boolean deleteAppointmentById(final Long appointment_id) {
-        final Optional<Appointment> appointmentOptional = this.appointmentRepository.findById(appointment_id);
+    public boolean deleteAppointmentById(Long appointmentId) {
+        Optional<Appointment> appointmentOptional = appointmentRepository.findById(appointmentId);
         if (appointmentOptional.isEmpty()) {
             return false;
         }
+
         Appointment appointment = appointmentOptional.get();
-        emailService.sendAppointmentCancelationEmailDoctor(appointment.getDoctor().getUser().getEmail(), appointment.getDate().toString(), appointment.getTime().toString());
-        emailService.sendAppointmentCancelationEmailPatient(appointment.getUser().getEmail(), appointment.getDate().toString(), appointment.getTime().toString(), appointment.getDoctor().getUser().getLastName());
-        this.appointmentRepository.deleteById(appointment_id);
+
+        emailService.sendAppointmentCancelationEmailDoctor(
+                appointment.getDoctor().getUser().getEmail(),
+                appointment.getDate().toString(),
+                appointment.getTime().toString()
+        );
+        emailService.sendAppointmentCancelationEmailPatient(
+                appointment.getUser().getEmail(),
+                appointment.getDate().toString(),
+                appointment.getTime().toString(),
+                appointment.getDoctor().getUser().getLastName()
+        );
+
+        appointmentRepository.deleteById(appointmentId);
         return true;
     }
 
     @Transactional
     public List<AppointmentResponseDTO> getMyAppointments(String email) {
-
         User user = userService.findUserByEmail(email);
-
         List<Appointment> result = new ArrayList<>();
 
-        // PATIENT
         if (SecurityUtils.hasRole(user, "ROLE_PATIENT") && user.getPatientProfile() != null) {
             result.addAll(getAppointmentsByPatient(user));
         }
 
-        // DOCTOR
         if (SecurityUtils.hasRole(user, "ROLE_DOCTOR") && user.getDoctorProfile() != null) {
             result.addAll(getAppointmentsByDoctorProfile(user.getDoctorProfile()));
         }
 
-        // ADMIN
         if (SecurityUtils.hasRole(user, "ROLE_ADMIN")) {
             result = appointmentRepository.findAll();
         }
 
-        // Map to DTOs
-        List<AppointmentResponseDTO> dtos = result.stream()
-                .map(this::getAppointmentResponseDTO)   // assuming you already have this method
-                .toList();
-
-        // Sort by date then time
-        return dtos.stream()
+        return result.stream()
+                .map(this::getAppointmentResponseDTO)
                 .sorted(Comparator
                         .comparing(AppointmentResponseDTO::getDate)
                         .thenComparing(AppointmentResponseDTO::getTime))
@@ -188,8 +186,7 @@ public class AppointmentService {
     }
 
     public List<AppointmentResponseDTO> getAppointmentsForDoctorOnDate(Long doctorId, LocalDate date) {
-        List<Appointment> appointments = appointmentRepository.findAppointmentsForDoctorOnDate(doctorId, date);
-        return appointments.stream()
+        return appointmentRepository.findAppointmentsForDoctorOnDate(doctorId, date).stream()
                 .map(a -> new AppointmentResponseDTO(
                         a.getDate().toString(),
                         a.getTime().toString(),
@@ -198,20 +195,20 @@ public class AppointmentService {
                         a.getDoctor().getUser().getFirstName(),
                         a.getUser().getFirstName()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
-    public void cancelAppointment(Long appointmentId) {
-
+    public void cancelAppointment(Long appointmentId, String currentUserEmail) {
         Appointment appointment = appointmentRepository.findById(appointmentId)
                 .orElseThrow(() -> new IllegalArgumentException("Appointment not found"));
 
+        User currentUser = userService.findUserByEmail(currentUserEmail);
 
-        // Optional but recommended: ensure only the patient who booked can cancel
-        User patient = userService.findUserByEmail(appointment.getUser().getEmail());
-        if (!appointment.getUser().getId().equals(patient.getId())) {
-            throw new org.springframework.security.access.AccessDeniedException("You cannot cancel this appointment.");
+        if (!appointment.getUser().getId().equals(currentUser.getId())) {
+            throw new org.springframework.security.access.AccessDeniedException(
+                    "You cannot cancel this appointment."
+            );
         }
 
         appointment.setStatus(AppointmentStatus.CANCELLED);
@@ -219,14 +216,12 @@ public class AppointmentService {
 
         User doctorUser = appointment.getDoctor().getUser();
 
-        // Notification to doctor
-        String msg = "Patient " + patient.getFirstName() + " " + patient.getLastName()
+        String msg = "Patient " + currentUser.getFirstName() + " " + currentUser.getLastName()
                 + " cancelled the appointment on " + appointment.getDate()
                 + " at " + appointment.getTime() + ".";
 
         notificationService.createNotification(doctorUser, msg);
 
-        // Email to doctor
         emailService.sendAppointmentCancelationEmailDoctor(
                 doctorUser.getEmail(),
                 appointment.getDate().toString(),
@@ -235,34 +230,34 @@ public class AppointmentService {
     }
 
     @Transactional
-    public void confirmAppointment(Long appointmentId) {
-
+    public void confirmAppointment(Long appointmentId, String currentDoctorEmail) {
         Appointment appointment = appointmentRepository.findById(appointmentId)
                 .orElseThrow(() -> new IllegalArgumentException("Appointment not found"));
 
-        String patientEmail = appointment.getUser().getEmail();
+        User currentDoctor = userService.findUserByEmail(currentDoctorEmail);
+        User appointmentPatient = appointment.getUser();
+        User doctorUser = appointment.getDoctor().getUser();
 
-        // Ensure only the patient who booked can cancel
-        User patient = userService.findUserByEmail(patientEmail);
-        if (!appointment.getUser().getId().equals(patient.getId())) {
-            throw new org.springframework.security.access.AccessDeniedException("You cannot cancel this appointment.");
+        if (!doctorUser.getId().equals(currentDoctor.getId())) {
+            throw new org.springframework.security.access.AccessDeniedException(
+                    "You cannot confirm this appointment."
+            );
         }
 
         appointment.setStatus(AppointmentStatus.CONFIRMED);
         appointmentRepository.save(appointment);
 
-        User doctorUser = appointment.getDoctor().getUser();
-
-        // Notification to Patient
-        String msg = "Patient " + doctorUser.getUsername()
+        String msg = "Dr. " + doctorUser.getLastName()
                 + " confirmed the appointment on " + appointment.getDate()
                 + " at " + appointment.getTime() + ".";
 
-        notificationService.createNotification(doctorUser, msg);
+        notificationService.createNotification(appointmentPatient, msg);
 
-        // Email to patient
-        emailService.sendAppointmentConfirmationbyDoctor(patientEmail, appointment.getDate().toString(), appointment.getTime().toString(), appointment.getDoctor().getUser().getLastName());
+        emailService.sendAppointmentConfirmationbyDoctor(
+                appointmentPatient.getEmail(),
+                appointment.getDate().toString(),
+                appointment.getTime().toString(),
+                doctorUser.getLastName()
+        );
     }
-
-
 }
